--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
-		<link rel="manifest" href="manifest.json" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>TodoMatic</title>
+		<link rel="manifest" href="manifest.json" />
 		<link rel="apple-touch-icon" href="public/apple-icon-180.png" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="description" content="PWA Demo app" />
 		<link
 			rel="apple-touch-startup-image"
 			href="public/apple-splash-2048-2732.jpg"
