--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>TodoMatic</title>
-		<link rel="manifest" href="manifest.json" />
+		<link rel="manifest" href="/manifest.json" />
 		<link rel="apple-touch-icon" href="public/apple-icon-180.png" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="description" content="PWA Demo app" />
